<resources>
    <string name="app_name">AddPost</string>
    <string name="activity_sign_up_hint_full_name">Full Name</string>
    <string name="activity_sign_up_email">Email Address</string>
    <string name="activity_sign_up_mobile">Mobile Number</string>
    <string name="activity_sign_up_password">Password</string>
    <string name="activity_sign_up_confirm_password">Confirm Password</string>
    <string name="activity_sign_up_already_registered">Already Registered??</string>
    <string name="activity_sign_up_not_registered">Not Registered??</string>
    <string name="activity_sign_up_button_register">REGISTER</string>
    <string name="activity_sign_up_login">LOGIN</string>


    <string name="please_enter_name">Please enter Name</string>
    <string name="please_enter_full_name">Please enter Name</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_mobile">Please enter Mobile</string>
    <string name="please_enter_valid_email">Please enter valid Email</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="please_enter_new_password">Please enter new confirm password</string>
    <string name="password_did_not_match">Password did\'nt match</string>
    <string name="please_enter_valid_mobile">Please enter valid Mobile</string>
    <string name="please_select_visitor_type">Please select visitor type</string>
    <string name="please_select_state_type">Please select state type</string>
    <string name="please_select_home_type">Please select home type</string>
    <string name="otp_didnt_match">OTP didn\'t match</string>
    <string name="activity_login_text_i_agree">You agree to our Term and Condition and Privacy Policy</string>

    <string name="activity_sign_in_hint_email">Email Address</string>
    <string name="activity_sign_in_hint_password">Password</string>
    <string name="activity_sign_in_button_submit">SIGN IN</string>
    <string name="activity_sign_in_text_forgot_password">Forgot Password ? </string>
    <string name="activity_sign_in_text_signup">Sign Up</string>


    <string name="activity_main_text_classified_ad">Post A Classified Ad In Just 3 Steps</string>
    <string name="activity_main_ad_details">1- Enter your Ad Details</string>
    <string name="activity_main_enter_ad_title">Ad Title</string>

    <string name="activity_main_ad_description">2- Enter Ad Descriptions, Upload photos</string>
    <string name="activity_main_enter_ad_description">Description</string>

    <string name="activity_main_your_information">3- Your Personal Information</string>
    <string name="activity_main_enter_city">City</string>
    <string name="activity_main_accept_terms">I accept Terms of Use and Posting Rules</string>

    <string name="activity_list_categories">Popular Categories</string>
    <string name="activity_list_parent_sub_categories">Sub Categories</string>

    <string name="activity_contact_us">Contact Us</string>
    <string name="activity_contact_address">Contact Address</string>

    <string name="activity_main_post_button">POST YOUR AD</string>

    <string name="activity_about_us_back_button">Home</string>
    <string name="activity_about_us_title">About Us</string>

    <string name="activity_about_us_text_1">Help Adya is an Indian company
        which provides search services and is made available on website. The companys headquarters
        is in Delhi. The customer is required to call on hotline number +91-8527198118 and ask the
        operator what services they are looking for and in which area and the operator send them an
        Email on their registered ID or SMS on their registered mobile number with the information.
        Apart from that, customers can directly search on website. Help Adyas core business skill
        lies in search services. Help Adya has a database of approximately 50000+ listings and numerous
        paid listings. Our services offered across various cities and towns in India.</string>

    <string name="dialog_text_auto_fill">Do you want to auto fill the details?</string>
    <string name="dialog_action_yes">YES</string>
    <string name="dialog_action_no">NO</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">CANCEL</string>
    <string name="dialog_action_save">SAVE</string>
    <string name="dialog_action_logout">LOGOUT</string>
    <string name="dialog_action_submit">SUBMIT</string>
    <string name="dialog_action_resend_otp">RESEND OTP</string>
    <string name="dialog_action_proceed">PROCEED</string>
    <string name="dialog_action_ignore">IGNORE</string>
    <string name="dialog_action_update">UPDATE</string>
    <string name="dialog_action_close">CLOSE</string>
    <string name="dialog_action_show_all">SHOW ALL</string>


    <string name="progress_dialog_text_loading">Loading&#8230;</string>
    <string name="progress_dialog_text_generating_survey">Generating Survey&#8230;</string>
    <string name="progress_dialog_text_logging_out">Logging Out&#8230;</string>
    <string name="progress_dialog_text_logging_in">Logging In&#8230;</string>
    <string name="progress_dialog_text_please_wait">Please wait&#8230;</string>
    <string name="progress_dialog_text_sending_request">Sending Request&#8230;</string>
    <string name="progress_dialog_text_submitting_responses">Submitting Responses&#8230;</string>
    <string name="progress_dialog_text_initializing">Initializing Application&#8230;</string>


    <string name="snackbar_text_no_internet_connection_available">No Internet Connection available
    </string>
    <string name="snackbar_text_error_occurred">Error Occurred</string>
    <string name="snackbar_text_exception_occurred">Exception Occurred</string>
    <string name="snackbar_text_invalid_access_pin">Invalid Access PIN</string>

    <string name="snackbar_action_go_to_settings">GO TO SETTINGS</string>
    <string name="snackbar_action_dismiss">DISMISS</string>
    <string name="snackbar_action_retry">RETRY</string>

    <string name="snackbar_action_undo">UNDO</string>
    
    <string-array name="ad_type">
        <item>select</item>
        <item>service</item>
        <item>sell</item>
    </string-array>
</resources>
