<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.actiknow.addpost.activity.SubmitAdActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvClassifiedAd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin_small"
                    android:gravity="center"
                    android:padding="@dimen/activity_margin_small"
                    android:text="@string/activity_main_text_classified_ad"
                    android:textColor="@color/text_color_red"
                    android:textSize="@dimen/text_size_medium"/>

                <TextView
                    android:id="@+id/tvAdDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin_extra_small"
                    android:padding="@dimen/activity_margin_small"
                    android:text="@string/activity_main_ad_details"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_size_large"/>

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_margin_small"
                    android:layout_marginRight="@dimen/activity_margin_small"
                    android:layout_marginStart="@dimen/activity_margin_small"
                    android:layout_marginLeft="@dimen/activity_margin_small"
                    android:layout_toEndOf="@+id/tv2"
                    android:layout_toRightOf="@+id/tv2"
                    android:background="@color/colorPrimaryDark"/>

                <Spinner
                    android:id="@+id/spAdType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:background="@drawable/edit_text_background"
                    android:padding="@dimen/edittext_padding"
                    android:textSize="@dimen/text_size_medium"
                    android:entries="@array/ad_type"/>

                <EditText
                    android:id="@+id/etAdTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/activity_main_enter_ad_title"
                    android:lines="1"
                    android:padding="@dimen/edittext_padding"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/text_size_medium"/>

                <Spinner
                    android:id="@+id/spCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:background="@drawable/edit_text_background"
                    android:padding="@dimen/edittext_padding"
                    android:textSize="@dimen/text_size_medium"
                    android:entries="@array/ad_type"

                 />

                <TextView
                    android:id="@+id/tvAdDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin_small"
                    android:padding="@dimen/activity_margin_small"
                    android:text="@string/activity_main_ad_description"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_size_large"/>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_margin_small"
                    android:layout_marginRight="@dimen/activity_margin_small"
                    android:layout_marginStart="@dimen/activity_margin_small"
                    android:layout_marginLeft="@dimen/activity_margin_small"
                    android:layout_toEndOf="@+id/tv2"
                    android:layout_toRightOf="@+id/tv2"
                    android:background="@color/colorPrimaryDark"/>

                <EditText
                    android:id="@+id/etMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:background="@drawable/edit_text_background"
                    android:gravity="top"
                    android:hint="@string/activity_main_enter_ad_description"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:padding="@dimen/edittext_padding"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/text_size_medium"
                    android:visibility="visible"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="end"
                    android:gravity="end"
                    >

                    <TextView
                        android:id="@+id/tvTotalWords"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total words : 0"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_gravity="end"
                        android:padding="5dp"

                        />
                    <TextView
                        android:id="@+id/tvTotalCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total words : 0"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_gravity="end"
                        android:padding="5dp"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvUploadPhotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin_small"
                    android:padding="@dimen/activity_margin_small"
                    android:text="Upload Photos"
                    android:textSize="@dimen/text_size_medium"/>
                
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:visibility="visible"
                    >

                    <ImageView
                        android:id="@+id/ivOne"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_launcher"
                        android:layout_weight="1"
                        android:padding="1dp"
                        android:scaleType="fitXY"
                        />

                    <ImageView
                        android:id="@+id/ivTwo"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_launcher"
                        android:padding="1dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        />

                    <ImageView
                        android:id="@+id/ivThree"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_launcher"
                        android:layout_weight="1"
                        android:padding="1dp"
                        android:scaleType="fitXY"
                        />

                    <ImageView
                        android:id="@+id/ivFour"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_launcher"
                        android:layout_weight="1"
                        android:padding="1dp"
                        android:scaleType="fitXY"
                        />

                    <ImageView
                        android:id="@+id/ivFive"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_launcher"
                        android:layout_weight="1"
                        android:padding="1dp"

                        android:scaleType="fitXY"
                        />


                </LinearLayout>

                <TextView
                    android:id="@+id/tvYourInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin_small"
                    android:padding="@dimen/activity_margin_small"
                    android:text="@string/activity_main_ad_description"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_size_large"
                    />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_margin_small"
                    android:layout_marginRight="@dimen/activity_margin_small"
                    android:layout_marginStart="@dimen/activity_margin_small"
                    android:layout_marginLeft="@dimen/activity_margin_small"
                    android:layout_toEndOf="@+id/tv2"
                    android:layout_toRightOf="@+id/tv2"
                    android:background="@color/colorPrimaryDark"/>


                <Spinner
                    android:id="@+id/spState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:background="@drawable/edit_text_background"
                    android:padding="@dimen/edittext_padding"
                    android:textSize="@dimen/text_size_medium"
                    android:entries="@array/ad_type"
                    />

                <EditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/activity_main_enter_city"
                    android:lines="1"
                    android:padding="@dimen/edittext_padding"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="@dimen/text_size_medium"
                    />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_accept_terms"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin_small"
                    android:padding="@dimen/activity_margin_small"
                    android:textSize="@dimen/text_size_medium"
                    />

                <TextView
                    android:id="@+id/tvSubmitPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:background="@drawable/rounded_button"
                    android:elevation="@dimen/button_elevation"
                    android:gravity="center"
                    android:padding="@dimen/button_padding"
                    android:text="@string/activity_main_post_button"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/text_size_extra_large"
                    android:textStyle="bold"/>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
