<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:fitsSystemWindows="true">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@android:color/transparent"
            app:titleEnabled="false">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_us_image_height"
                android:adjustViewBounds="true"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/help_adya_contact_us_image"
                android:visibility="visible"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MyApp.ActionBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:animateLayoutChanges="true"
                android:background="@android:color/transparent"
                android:contentInsetEnd="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetRight="0dp"
                android:contentInsetStart="0dp"
                android:visibility="visible"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">
                <RelativeLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:id="@+id/rlBack"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                        <ImageView
                            android:id="@+id/ivBack"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_back"
                            android:visibility="visible"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_toEndOf="@+id/ivBack"
                            android:layout_toRightOf="@+id/ivBack"
                            android:gravity="center_vertical"
                            android:text="@string/activity_about_us_back_button"
                            android:textColor="@color/text_color_black"
                            android:textSize="@dimen/text_size_small"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/activity_about_us_title"
                        android:textColor="@color/text_color_black"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold"/>
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/Aboutus"
                android:padding="@dimen/activity_margin_small"
                android:text="@string/activity_about_us_title"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvAboutus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_about_us_text_1"
                android:padding="@dimen/activity_margin_small"
                android:layout_below="@+id/Aboutus"
                android:textSize="14dp"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>